fix(layout): ajustes de visibilidade

--- a/src/app/pages/loterias/concurso/concurso.component.scss
+++ b/src/app/pages/loterias/concurso/concurso.component.scss
@@ -3,6 +3,10 @@
   font-size: 22px;
 }
 
+ion-title {
+  font-size: 20px;
+}
+
 ion-card-header {
   text-align: center;
 }
