--- a/src/app/pages/loterias/list-concursos/list-concursos.component.scss
+++ b/src/app/pages/loterias/list-concursos/list-concursos.component.scss
@@ -10,3 +10,7 @@
 ion-card-header {
   text-align: center;
 }
+
+ion-title {
+  font-size: 20px;
+}
